Adicionando Autenticação e Autorização ao backend e ajustes

--- a/backend/StormGames.API/appsettings.json
+++ b/backend/StormGames.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=DbStormGames;User ID=sa;Password=123456;Integrated Security=SSPI;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "this-is-a-super-secret-key",
+    "Issuer": "issuer",
+    "Audience": "audience",
+    "ExpiryMinutes": 60
   }
 }
