--- a/backend/StormGames.Application/StormGames.Application.csproj
+++ b/backend/StormGames.Application/StormGames.Application.csproj
@@ -6,11 +6,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CommandHandlers" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
